--- a/docs/changelogs/v0.1.4.md
+++ b/docs/changelogs/v0.1.4.md
@@ -1,23 +1,10 @@
 ##### 2014-08-15 v0.1.4
-* update readme.md
 * update travis
 * validation options.version
+* delete variable copyConfigXml
 * change "cordova create" to "phonegap create"
 * update grunt-contrib-clean devDependencies
 * update package.json
 * add grunt plugin "load-grunt-config"
 * add grunt plugin "grunt-readme-generator"
-
-
-grunt-jsonlint
-grunt-contrib-watch
-
-more task for travis
-
-
-
-travis
-
-notifications:
-  email:
-    - info@weaponxi.com
+* update readme.md
