--- a/docs/changelogs/v0.1.4.md
+++ b/docs/changelogs/v0.1.4.md
@@ -1,7 +1,7 @@
 ##### 2014-08-15 v0.1.4
 * update travis
 * validation options.version
-* delete variable copyConfigXml
+* delete variable options.copyConfigXml
 * change "cordova create" to "phonegap create"
 * update grunt-contrib-clean devDependencies
 * update package.json
